@@ -1,13 +1,17 @@
 package dev.efnilite.vilib.command;
 
-import dev.efnilite.vilib.util.Commands;
+import dev.efnilite.vilib.ViMain;
+import dev.efnilite.vilib.util.Version;
 import org.bukkit.Bukkit;
 import org.bukkit.command.*;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Class to wrap commands, which makes it a lot easier to produce them.
@@ -15,6 +19,120 @@ import java.util.stream.Collectors;
  * @author Efnilite
  */
 public abstract class ViCommand implements CommandExecutor, TabCompleter {
+
+    private static Method SYNC_COMMANDS;
+
+    static {
+        try {
+            SYNC_COMMANDS = getCBClass().getMethod("syncCommands");
+        } catch (Exception ignored) {
+
+        }
+    }
+
+    /**
+     * Retrieves the current command map instance
+     *
+     * @return the command map instance
+     */
+    public static @Nullable SimpleCommandMap retrieveMap() {
+        try {
+            Field field = Bukkit.getServer().getClass().getDeclaredField("commandMap");
+            field.setAccessible(true);
+            return (SimpleCommandMap) field.get(Bukkit.getServer());
+        } catch (NoSuchFieldException | IllegalAccessException ex) {
+            ex.printStackTrace();
+            ViMain.logging().error("Error while trying to access the command map.");
+            ViMain.logging().error("Commands will not show up on completion.");
+            return null;
+        }
+    }
+
+    /**
+     * Adds a command to the Command Map
+     *
+     * @param alias   The alias
+     * @param command The command instance
+     * @return the command that was added
+     */
+    public static Command add(@NotNull String alias, @NotNull Command command) {
+        try {
+            Field field = SimpleCommandMap.class.getDeclaredField("knownCommands");
+            field.setAccessible(true);
+
+            CommandMap map = retrieveMap();
+
+            Map<String, Command> knownCommands = (Map<String, Command>) field.get(map);
+
+            field.set(map, knownCommands);
+
+            return knownCommands.put(alias, command);
+        } catch (NoSuchFieldException ex) {
+            ViMain.logging().stack("knownCommands field not found for registry", "update your server or switch to a supported server platform", ex);
+            return null;
+        } catch (Throwable throwable) {
+            throwable.printStackTrace();
+            ViMain.logging().error("There was an error while trying to register your command to the Command Map");
+            ViMain.logging().error("It might not show up in-game in the auto-complete, but it does work.");
+            return null;
+        }
+    }
+
+    /**
+     * Unregister a command from the map.
+     *
+     * @param command The command
+     */
+    public static void unregister(@NotNull Command command) {
+        CommandMap map = retrieveMap();
+
+        if (map != null) {
+            command.unregister(map);
+        }
+    }
+
+    /**
+     * Syncs all commands to all players
+     */
+    public static void sync() {
+        if (SYNC_COMMANDS == null) {
+            return;
+        }
+
+        try {
+            SYNC_COMMANDS.invoke(Bukkit.getServer());
+        } catch (IllegalAccessException | InvocationTargetException ex) {
+            throw new RuntimeException(ex);
+        }
+    }
+
+    /**
+     * Registers a command under plugin.yml
+     *
+     * @param name    The name of this command in plugin.yml
+     * @param wrapper The command that's going to be registered
+     */
+    public static void register(String name, ViCommand wrapper) {
+        PluginCommand command = Bukkit.getPluginCommand(name);
+
+        if (command == null) {
+            return;
+        }
+
+        command.setExecutor(wrapper);
+        command.setTabCompleter(wrapper);
+
+        // add command to internal register
+        add(name, command);
+    }
+
+    private static Class<?> getCBClass() {
+        try {
+            return Class.forName("org.bukkit.craftbukkit.%s.CraftServer".formatted(Version.getInternalVersion()));
+        } catch (ClassNotFoundException ex) {
+            throw new RuntimeException("Couldn't find CraftBukkit class " + "CraftServer");
+        }
+    }
 
     /**
      * UUID-based cooldown system
@@ -43,42 +161,40 @@ public abstract class ViCommand implements CommandExecutor, TabCompleter {
         if (sender instanceof ConsoleCommandSender) { // ignore console (has no UUID)
             return true;
         }
+
         Player player = (Player) sender;
         UUID uuid = player.getUniqueId();
 
-        CommandCooldown cooldown = null; // the current cooldown
+        CommandCooldown cooldown; // the current cooldown
         List<CommandCooldown> playerCooldowns = cooldowns.get(uuid);
 
         if (playerCooldowns == null) {
             playerCooldowns = new ArrayList<>();
-            playerCooldowns.add(new CommandCooldown(arg));
+            playerCooldowns.add(new CommandCooldown(System.currentTimeMillis(), arg));
             cooldowns.put(uuid, playerCooldowns);
             return true;
         }
 
-        for (CommandCooldown plCooldown : playerCooldowns) { // get the appropriate commandcooldown class
-            if (plCooldown.getArg().equals(arg)) {
-                cooldown = plCooldown;
-                break;
-            }
-        }
+        // get the appropriate commandcooldown class
+        cooldown = playerCooldowns.stream()
+                .filter(plCooldown -> plCooldown.arg().equals(arg))
+                .findFirst().orElse(null);
 
         if (cooldown == null) { // cooldown doesnt exist yet
-            playerCooldowns.add(new CommandCooldown(arg));
+            playerCooldowns.add(new CommandCooldown(System.currentTimeMillis(), arg));
             cooldowns.put(uuid, playerCooldowns);
             return true;
         }
 
-        if (System.currentTimeMillis() - cooldown.getLastExecuted() > cooldownMs) {
-
-            playerCooldowns.remove(cooldown); // update cooldown
-            playerCooldowns.add(new CommandCooldown(arg));
-            cooldowns.put(uuid, playerCooldowns);
-
-            return true;
-        } else {
+        if (System.currentTimeMillis() - cooldown.lastExecuted() <= cooldownMs) {
             return false;
         }
+
+        playerCooldowns.remove(cooldown); // update cooldown
+        playerCooldowns.add(new CommandCooldown(System.currentTimeMillis(), arg));
+        cooldowns.put(uuid, playerCooldowns);
+
+        return true;
     }
 
     /**
@@ -89,7 +205,7 @@ public abstract class ViCommand implements CommandExecutor, TabCompleter {
      * @return the updated possible completions
      */
     protected List<String> completions(String typed, List<String> possible) {
-        return possible.stream().filter(option -> option.toLowerCase().contains(typed)).collect(Collectors.toList());
+        return possible.stream().filter(option -> option.toLowerCase().contains(typed)).toList();
     }
 
     /**
@@ -100,27 +216,7 @@ public abstract class ViCommand implements CommandExecutor, TabCompleter {
      * @return the updated possible completions
      */
     protected List<String> completions(String typed, String... possible) {
-        return Arrays.stream(possible).filter(option -> option.toLowerCase().contains(typed)).collect(Collectors.toList());
-    }
-
-    /**
-     * Registers a command under plugin.yml
-     *
-     * @param name    The name of this command in plugin.yml
-     * @param wrapper The command that's going to be registered
-     */
-    public static void register(String name, ViCommand wrapper) {
-        PluginCommand command = Bukkit.getPluginCommand(name);
-
-        if (command == null) {
-            return;
-        }
-
-        command.setExecutor(wrapper);
-        command.setTabCompleter(wrapper);
-
-        // add command to internal register
-        Commands.add(name, command);
+        return Arrays.stream(possible).filter(option -> option.toLowerCase().contains(typed)).toList();
     }
 
     @Override
@@ -133,29 +229,11 @@ public abstract class ViCommand implements CommandExecutor, TabCompleter {
         return tabComplete(sender, args);
     }
 
-    public static class CommandCooldown {
+    /**
+     * @param arg          The argument
+     * @param lastExecuted When the command with arg was last executed
+     */
+    private record CommandCooldown(long lastExecuted, String arg) {
 
-        /**
-         * The argument
-         */
-        private final String arg;
-
-        /**
-         * When the command with arg was last executed
-         */
-        private final long lastExecuted;
-
-        public CommandCooldown(String arg) {
-            this.lastExecuted = System.currentTimeMillis();
-            this.arg = arg;
-        }
-
-        public long getLastExecuted() {
-            return lastExecuted;
-        }
-
-        public String getArg() {
-            return arg;
-        }
     }
 }
